fixed a gap

--- a/styles.scss
+++ b/styles.scss
@@ -115,7 +115,6 @@ main {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 10px;
 		position: relative;
 		img {
 			position: absolute;
